# class-edge

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
class-tracker/include/: Tracker.h
class-tracker/src/: Tracking.cpp
data/: AIparams.yaml  README.md  all_cameras_en.yaml  params.yaml  paramsMIND.yaml
data/gt_mtsc_yolo3_deepsort/c006/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c007/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c008/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c009/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c010/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c016/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c017/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c018/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c019/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c020/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c021/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c022/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c023/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c024/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c025/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c026/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c027/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c028/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c029/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c033/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c034/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c035/gt/: gt.txt
data/gt_mtsc_yolo3_deepsort/c036/gt/: gt.txt
data/pmat_new/: pmat_07-03-10218_20p.txt  pmat_07-03-20932_10p.txt  pmat_07-03-20936_20p.txt  pmat_07-03-20937_20p.txt  pmat_07-03-20939_20p.txt  pmat_07-03-20940_10p.txt  pmat_07-03-6310_10p.txt  pmat_07-03-6311_10p.txt  pmat_07-03-6312_10p.txt  pmat_07-03-6313_10p.txt  pmat_07-03-6314_10p.txt  pmat_07-03-6315_10p.txt  pmat_07-03-634_10p.txt  pmat_07-03-636_10p.txt  pmat_07-03-637_7p.txt  pmat_07-10-mapgeo-to-masa4670_30p.txt  pmat_07-10-masa4670-to-mapgeo_30p.txt  pmat_10218_30p.txt  pmat_20932_10p.txt  pmat_20936_30p.txt  pmat_20937_30p.txt  pmat_20939_30p.txt  pmat_20940_30p.txt  pmat_6310_10p.txt  pmat_6311_10p.txt  pmat_6312_10p.txt  pmat_6313_10p.txt  pmat_6314_10p.txt  pmat_6315_10p.txt  pmat_634_10p.txt  pmat_636_20p.txt  pmat_637_20p.txt
demo/: create_rois.cpp  encrypt_params.cpp  eval_tracking.cpp  main.cpp  test_undistort.cpp
include/: BackGroundSuppression.h  BackGroundSuppression1.h  BackGroundSuppression2.h  Collage.h  EdgeViewer.h  Profiler.h  camera_elaboration.h  configuration.h  data.h  message.h  roi.h  undistort.h  video_capture.h
scripts/: configure.sh  download_caches.sh  install-glfw-3.3.sh
src/: BackGroundSuppression1.cpp  BackGroundSuppression2.cpp  Collage.cpp  camera_elaboration.cpp  configuration.cpp  data.cpp  main.cpp  message.cpp  roi.cpp  undistort.cu  video_capture.cpp
